# OnlyAgent-Vault

apps/gateway/: Cargo.toml
apps/gateway/src/: connect.rs  gateway.rs  main.rs  module.rs
apps/gateway/src/hands/: api.rs  compile.rs  db.rs  mod.rs  models.rs  packet.rs  session.rs
apps/gateway/src/vault/: api.rs  cache.rs  crypto.rs  db.rs  mod.rs  models.rs
apps/screencap/: Cargo.toml
apps/screencap/src/: main.rs
apps/web/: package.json
apps/web/src/app/(dashboard)/hands/: page.tsx
apps/web/src/app/(dashboard)/hands/_components/: job-list.tsx  live-view.tsx
apps/web/src/app/(dashboard)/vault/: page.tsx
apps/web/src/app/(dashboard)/vault/_components/: pending-request-card.tsx  vault-content.tsx
apps/web/src/app/api/health/: route.test.ts  route.ts
apps/web/src/lib/: nav-items.json  nav-items.ts
apps/web/src/lib/actions/: vault.ts
apps/web/src/lib/hands/: api.ts  bridge.ts  index.ts  types.ts  webhid.ts
apps/web/src/lib/services/: vault-record-service.ts
apps/web/src/lib/vault/: api.ts  index.ts  onlykey.ts  types.ts
